@@ -6,6 +6,9 @@ job_runner/torque.py
 provide functionality for queueing and querying jobs on a TORQUE cluster
 
 """
+
+from __future__ import print_function
+
 import errno
 import sys
 import textwrap
@@ -315,6 +318,8 @@ class TorqueJobRunner(object):
 
         # This script was generated by Civet (Version $CIVET_VERSION)
 
+        echo "executed epilogue"
+
         #define civet shell functions
         source $FUNCTIONS
 
@@ -395,6 +400,22 @@ class TorqueJobRunner(object):
             # we aren't actually submitting jobs,  create a file in the log 
             # directory that civet_status can use to detect this case
             open(os.path.join(log_dir, common.NO_SUB_FLAG), 'w').close()
+
+        # do some sanity checking on groups of files created in the log dir
+        g_test_file = os.path.join(log_dir, ".group_test")
+        open(g_test_file, 'w').close()
+        gid = os.stat(g_test_file).st_gid
+        os.remove(g_test_file)
+        if gid not in os.getgroups():
+            print("ERROR: New files created in the log directory are being \n"
+                  "given group ownership of a group that you are not a member \n"
+                  "of. This will prevent TORQUE from executing job epilog \n"
+                  "scripts.", file=sys.stderr)
+            sys.exit(1)
+
+
+
+
 
     def queue_job(self, batch_job):
         """
@@ -811,7 +832,7 @@ class TorqueJobRunner(object):
 
         except OSError as exception:
             if exception.errno != errno.EEXIST:
-                print >> sys.stderr, 'Error while creating directory', path
+                print('Error while creating directory ' + path, file=sys.stderr)
                 raise
 
 
@@ -823,29 +844,27 @@ def main():
 
     job_runner = TorqueJobRunner()
     jm = JobManager()
-    
-    print common.CIVET_HOME
 
     job = BatchJob("hostname", walltime="00:02:00", name="test_job", 
                    modules=["python"], mail_option="be")
 
-    print "submitting job with the following script:"
-    print "---------------------------------------------------"
-    print job_runner.generate_script(job)
-    print "---------------------------------------------------"
+    print("submitting job with the following script:")
+    print("---------------------------------------------------")
+    print(job_runner.generate_script(job))
+    print("---------------------------------------------------")
     id = job_runner.queue_job(job)
     
-    print id
+    print(id)
     
     status = jm.query_job(id)
     if status:
-        print "Status of job is " + status.state
+        print("Status of job is " + status.state)
     
-    print "calling job_runner.release_all()"
+    print("calling job_runner.release_all()")
     job_runner.release_all()
     status = jm.query_job(id)
     if status:
-        print "Status of job is " + status.state
+        print("Status of job is " + status.state)
 
     
 if __name__ == '__main__': 
