@@ -12,6 +12,9 @@ Bug fixes
    empty, now reports that there was a submission failure
 
 Features
+ - Detect conditions where Torque stdout/stderr files will get created with a
+   group that the user does not belong to.  This prevents the user job epilogue
+   from executing.
  - Add new "pipeline_root" attribute for <dir> tag.  If true, Civet will set
    the directory to the pipeline's XML root directory.
  - datestamp_prepend can now be combined with append and datestamp_append tags
